fixed z-index issue

--- a/src/components/styles/Home.module.scss
+++ b/src/components/styles/Home.module.scss
@@ -57,6 +57,7 @@
     margin-top: 20px;
     opacity: 0.42;
     font-weight: 300;
+    z-index: 3;
   }
 }
 
@@ -64,6 +65,7 @@
   display: flex;
   gap: 20px;
   margin-top: 50px;
+  z-index: 3;
   button {
     padding: 15px 30px;
     background-color: transparent;
